content/developer-platform/setup/quickstart/data/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: kdp-system
spec:
  hostnames:
    - login.<DOMAIN>
  parentRefs:
    - name: shared-gateway
      namespace: <GATEWAY_NAMESPACE>
  rules:
    - backendRefs:
        - name: dex
          port: 5556
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kdp-dashboard
  namespace: kdp-system
spec:
  hostnames:
    - dashboard.<DOMAIN>
  parentRefs:
    - name: shared-gateway
      namespace: <GATEWAY_NAMESPACE>
  rules:
    - backendRefs:
        - name: kdp-dashboard
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
